# haskell-shell-experiment

./: .gitignore  haskell-shell-experiment.cabal  run-haskell-shell-experiment  stack.yaml
src/: Main.hs
