name:           haskell-shell-experiment
version:        0.0.0.0
synopsis:       Comparison of some haskell shell replacements
homepage:       http://github.com/cblp/haskell-shell-experiment
license:        BSD3
license-file:   LICENSE
author:         Yuriy Syrovetskiy
maintainer:     cblp@cblp.su
copyright:      2015 Yuriy Syrovetskiy
category:       System
build-type:     Simple
-- extra-source-files:
cabal-version:  >= 1.10

library
    hs-source-dirs:   src
    exposed-modules:  Lib
    build-depends:    base >= 4.7 && < 5
    default-language: Haskell2010

test-suite haskell-shell-experiment-test
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    base
                    , haskell-shell-experiment
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

source-repository head
    type:     git
    location: git@github.com:cblp/haskell-shell-experiment.git
