name:           haskell-shell-experiment
version:        0.0.0.0
synopsis:       Comparison of some haskell shell replacements
homepage:       http://github.com/cblp/haskell-shell-experiment
license:        BSD3
license-file:   LICENSE
author:         Yuriy Syrovetskiy
maintainer:     cblp@cblp.su
copyright:      2015 Yuriy Syrovetskiy
category:       System
build-type:     Simple
-- extra-source-files:
cabal-version:  >= 1.10

executable haskell-shell-experiment
    hs-source-dirs:   src
    main-is:          Main.hs
    ghc-options:      -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
    build-depends:    base
                    , criterion
                    , MissingH
                    , HSH
                    , HUnit
    default-language: Haskell2010

source-repository head
    type:     git
    location: git@github.com:cblp/haskell-shell-experiment.git
